--- a/GraphQLFirst/appsettings.json
+++ b/GraphQLFirst/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.100.9,1488;Database=GraphContext;Trusted_Connection=False;Encrypt=False;User=sa;Password=Like1_Like2;"
+  }
 }
