--- a/GraphQLFirst/GraphQLFirst.csproj
+++ b/GraphQLFirst/GraphQLFirst.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.2.0" />
-      <PackageReference Include="HotChocolate.AspNetCore" Version="12.16.0" />
-      <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.16.0" />
+      <PackageReference Include="GraphQL.Server.All" Version="7.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
         <PrivateAssets>all</PrivateAssets>
